# EngineForGames

./: .gitignore  .gitmodules  CMakeLists.txt  Dock  Dock.md  Makefile  Qwen.html  README.md  imgui.ini  settings.json
assets/shaders/: fragment.frag  vertex.glsl
assets/shaders/line/: debug_line.vert
engine/: LightEngine.hpp  engineapi.hpp
engine/core/: Engine.cpp  Engine.hpp  SpatialPartitioning.cpp  SpatialPartitioning.hpp  Systems.cpp  Systems.hpp
engine/core/ecs/: ECS.hpp
engine/core/ecs/components/: ActiveComponent.hpp  BoxCollider2D.hpp  Camera.hpp  CircleCollider2D.hpp  CoreComponents.hpp  LayerRender.hpp  NameComponent.hpp  PhysicsComponents.hpp  Position2D.hpp  Rigidbody2D.hpp  ScriptComponent.cpp  ScriptComponent.hpp  TagComponent.hpp  (+4 more)
engine/core/events/: EventSystem.cpp  EventSystem.hpp  InputManager.hpp
engine/core/physics/: Collision.cpp  Collision.hpp  CollisionDetection.cpp  CollisionDetection.hpp  CollisionResolution.cpp  CollisionResolution.hpp  CollisionShapes.hpp  SpatialHashGrid.hpp
engine/core/scene/: GameObject.hpp  Object.hpp
engine/core/ui/: ImGuiContext.cpp  ImGuiContext.hpp  Settings.cpp  Settings.hpp
engine/core/utils/: Destruction.cpp  Destruction.hpp  Logger.cpp  Time.cpp
engine/core/window/: GameWindow.cpp  GameWindow.hpp
include/components/: Components.hpp
include/core/: Component.hpp  ECS.hpp  Engine.hpp  EngineState.hpp  EventSystem.hpp  GameObject.hpp  GameWindow.hpp  SpatialPartitioning.hpp
include/core/components/: SpriteComponent.hpp  TransformComponent.hpp
include/graphics/: GLContext.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Texture2D.hpp
include/ui/: ImGuiContext.hpp
include/utils/: Logger.hpp  ShaderManager.hpp  Systems.hpp  TextureLoader.hpp
libs/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
sandbox/: ExampleScript.hpp  Script.hpp  main.cpp
src/core/: Engine.cpp  EventSystem.cpp  GameObject.cpp  GameWindow.cpp  Rect.hpp  Settings.cpp  SpatialPartition.cpp
src/graphics/: GLContext.cpp  GLContext.hpp  Renderer.cpp  Shader.cpp  Shader.hpp
src/ui/: ImGuiContext.cpp  ImGuiContext.hpp
src/utils/: Logger.cpp  ShaderLoader.cpp  ShaderLoader.hpp  ShaderManager.cpp  ShaderManager.hpp  Systems.cpp  TextureLoader.cpp  TextureLoader.hpp  Time.cpp  Time.hpp
tests/: CameraController.hpp  ExampleScript.hpp  Script.hpp  main.cpp
(+12 files in other folders)
